--- a/ui/design.ui
+++ b/ui/design.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="AddTask">
     <property name="geometry">
      <rect>
       <x>290</x>
